# intake-virtual-icechunk

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.conda/: meta.yaml
.github/workflows/: cd.yml  ci.yml  clean-ceph-store.yml
docs/: conf.py
docs/reference/: api.md  api.rst
scripts/: clean_ceph_store.py
src/intake_virtual_icechunk/: __init__.py  _build.py  _source.py  _storage.py  cat.py  core.py  source.py  telemetry.py  utils.py
src/intake_virtual_icechunk/create/: _build.py
src/intake_virtual_icechunk/source/: __init__.py  _build.py  _containers.py  utils.py
tests/: conftest.py  test_core.py  test_source.py  test_source__containers.py  test_source_build.py  test_utils.py
tests/data/: access-om2.csv  access-om2.json
