[project]
name = "intake_virtual_icechunk"
authors = [
    { name = "ACCESS-NRI" },
]
description = "An intake plugin for building and reading Icechunk stores via VirtualiZarr and intake-esm"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "intake >= 0.7.0",
    "icechunk",
    "virtualizarr",
    "intake-esm",
    "zarr",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/ACCESS-NRI/intake-virtual-icechunk"
"Bug Tracker" = "https://github.com/ACCESS-NRI/intake-virtual-icechunk/issues"

[project.entry-points."intake.drivers"]
virtual_icechunk = "intake_virtual_icechunk.core:IcechunkSource"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0.0",
    "setuptools_scm",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--cov=./src --cov-report=xml"

[tool.coverage.run]
omit = [
    "*/tests/*",
]

[tool.pixi.project]
name = "intake-virtual-icechunk"
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
icechunk = "*"
virtualizarr = "*"
intake-esm = "*"
zarr = "*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "*"

[tool.pixi.feature.test.tasks]
test = "pytest tests/"
lint = "ruff check src/"

[tool.pixi.environments]
test-py310 = ["test", "py310"]
test-py311 = ["test", "py311"]
test-py312 = ["test", "py312"]
test-py313 = ["test", "py313"]

[tool.ruff]
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
lint.ignore = [
    "E402",
    "E501",
]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
known-first-party = ["intake_virtual_icechunk"]
