[project]
name = "intake_virtual_icechunk"
authors = [
    { name = "ACCESS-NRI" },
]
description = "An intake plugin for building and reading Icechunk stores via VirtualiZarr and intake-esm"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "intake>=2.0.0",
    "icechunk",
    "intake-esm",
    "zarr",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

virtualizarr = [
    "virtualizarr",
]

[project.urls]
Homepage = "https://github.com/ACCESS-NRI/intake-virtual-icechunk"
"Bug Tracker" = "https://github.com/ACCESS-NRI/intake-virtual-icechunk/issues"

[project.entry-points."intake.drivers"]
virtual_icechunk = "intake_virtual_icechunk.core:IcechunkCatalog"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0.0",
    "setuptools_scm",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--cov=./src --cov-report=xml"

[tool.coverage.run]
omit = [
    "*/tests/*",
]

[tool.pixi.workspace]
name = "intake-virtual-icechunk"
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.dependencies]
intake-esm = "*"
zarr = "*"

[tool.pixi.feature.icechunk-1.pypi-dependencies]
icechunk = "*"

[tool.pixi.feature.icechunk-2.pypi-dependencies]
icechunk = ">=2.0.0,<3.0.0"

[tool.pixi.feature.virtualizarr.dependencies]
virtualizarr = "*"

[tool.pixi.feature.dev.pypi-dependencies]
intake_virtual_icechunk = { path = ".", editable = true }
pdbpp = ">=0.11.7,<0.12"

[tool.pixi.feature.dev.dependencies]
ipykernel = ">=7.2.0,<8"
jupyterlab = ">=4.5.6,<5"
pytest = ">=9.0.3,<10"

[tool.pixi.feature.dev.tasks]
setup-ipykernel = {cmd= "python -m ipykernel install --user --name=intake-virtual-icechunk-dev", description = "Set up the ipykernel for the dev environment"}

[tool.pixi.feature.test.pypi-dependencies]
intake_virtual_icechunk = { path = ".", editable = false }


[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "*"

[tool.pixi.feature.test.tasks]
test = { cmd = "pytest tests/" , description = "Run the test suite" }
lint = { cmd = "ruff check src/" , description = "Run linting" }

[tool.pixi.environments]
default = { features = ["dev","py313","icechunk-2", "virtualizarr"], solve-group = "default" }
icechunk-1 = { features = ["dev","py313","icechunk-1", "virtualizarr"], solve-group = "icechunk-1" }
test-py312 = ["test", "py312", "virtualizarr"]
test-py313 = ["test", "py313", "virtualizarr"]
test-py314 = ["test", "py314", "virtualizarr"]

[tool.ruff]
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
lint.ignore = [
    "E402",
    "E501",
]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
known-first-party = ["intake_virtual_icechunk"]
